--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button {
   line-height: 2.25rem;
   background: hsla(0, 0%, 100%, 0.25);
   cursor: pointer;
+  outline: none;
 }
 
 button:nth-of-type(1) {
