--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
   border-radius: 0.5rem;
   border: 1px solid hsla(0, 0%, 100%, 0.25);
   opacity: 0;
+  visibility: hidden;
 }
 
 .controls p {
